--- a/style.css
+++ b/style.css
@@ -10,36 +10,40 @@
 
 body {
 	background: linear-gradient(to right bottom, rgb(17, 221, 160), rgb(152, 15, 177));
-	/* background-repeat: no-repeat;
+	background-repeat: no-repeat;
 	background-attachment: fixed;
-	background-position: center; */
-	min-width: 800px;	/**/
+	background-position: center;
+	min-width: 620px;
+	min-height: 720px;
 	text-align: center;
 }
 
 #main {
 	background: linear-gradient(to right bottom, rgba(255, 255, 255, 0.55), rgba(255, 255, 255, 0.25));
+	backdrop-filter: blur(25px);
 	padding: 30px;
 	margin: auto;
-	max-width: 700px;
-	height: 96vh;
 	margin-top: 2vh;
 	margin-bottom: 2vh;
-	backdrop-filter: blur(25px);
+	height: 96vh;
+	min-width: 600px;
+	width: 75%;
+	max-width: 700px;
 }
 
 #search {
 	background: linear-gradient( to right bottom, rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.3));
-	padding: 1vh 14px;
+	padding: 9px 14px;
 	width: 65%;
 	border: none;
 	outline: none;
 }
 
 #results {
-	margin-top: 5.5vh;
+	margin-top: 5vh;
 	height: 80vh;
 	overflow: auto;
+	border-radius: 0px;
 }
 
 #results::-webkit-scrollbar {
@@ -48,25 +52,26 @@ body {
 
 .card {
 	background: linear-gradient( to right bottom, rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.3));
-	margin: 20px;
-	padding: 20px;
+	margin: 20px 0px;
+	padding-bottom: 20px;
 	overflow: hidden;
 	transition: .25s ease;
 }
 
 .title-wrapper {
 	cursor: pointer;
-	margin-bottom: 20px;
+	padding: 20px;
 }
 
 .cont {
 	margin-bottom: 20px;
+	padding: 0px 20px;
 	text-align: justify;
 }
 
 .wrapper {
 	margin-top: 3px;
-	text-align: left;
+	padding: 0px 20px;
 	display: flex;
 }
 
@@ -80,10 +85,10 @@ body {
 
 .tag2 {
 	background: linear-gradient( to right bottom, rgba(50, 50, 50, 0.75), rgba(50, 50, 50, 0.4));
+	color: white;
 	font-size: 0.75rem;
 	padding: 5px;
 	margin: 1px;
 	max-width: fit-content;
-	color: white;
 	/* text-decoration: none; */
 }
