--- a/style.css
+++ b/style.css
@@ -102,11 +102,18 @@ button:hover {
 	text-align: justify;
 }
 
-.wrapper {
+.outer-wrapper {
 	height: 27px;
 	margin-top: 3px;
 	padding: 0px 20px;
 	display: flex;
+}
+
+.wrapper {
+	margin: 0px;
+	padding: 0px;
+	display: flex;
+	flex: 1;
 }
 
 .tag1 {
