--- a/Frontend/Add/add.css
+++ b/Frontend/Add/add.css
@@ -48,6 +48,7 @@ body {
 	padding-bottom: 20px;
 	overflow: hidden;
 	transition: 0.25s ease;
+	text-align: left;
 }
 
 .title-wrapper {
@@ -149,10 +150,6 @@ textarea {
 	outline: none;
 }
 
-form {
-	text-align: left;
-}
-
 .form-btn {
 	margin-top: 18px;
 	background: none;
@@ -161,9 +158,17 @@ form {
 	outline: none;
 	margin-left: auto;
 	width: 21px;
+	font-size: 0.75rem;
+	background-color: rgba(255, 255, 255, 0.65);
 }
 
 #bottom {
 	display: flex;
 	padding-right: 20px;
+}
+
+code {
+	background-color: rgba(25, 25, 25, 0.75);
+	color: rgb(210, 210, 210);
+	padding: 2px 5px;
 }
