--- a/Frontend/Add/add.css
+++ b/Frontend/Add/add.css
@@ -14,17 +14,28 @@ body {
 	background-attachment: fixed;
 	background-position: center;
 	min-width: 620px;
+	height: 100vh;
 	min-height: 720px;
 	text-align: center;
+	display: flex;
+}
+
+body::-webkit-scrollbar {
+	width: 0px;
+	height: 7px;
+}
+
+body::-webkit-scrollbar-thumb {
+	background-color: rgba(25, 25, 25, 0.75);
+	border-radius: 3px;
 }
 
 #main {
 	background: linear-gradient(to right bottom, rgba(255, 255, 255, 0.55), rgba(255, 255, 255, 0.25));
 	backdrop-filter: blur(25px);
-	padding: 30px;
+	padding: 30px 0px;
 	margin: auto;
-	margin-top: 2vh;
-	margin-bottom: 2vh;
+	min-height: 690px;
 	height: 96vh;
 	min-width: 600px;
 	width: 75%;
@@ -32,8 +43,12 @@ body {
 }
 
 #results {
-	margin-top: 5vh;
-	height: 80vh;
+	margin: 30px;
+	position: absolute;
+	left: 0px;
+	right: 0px;
+	top: 67px;
+	bottom: 0px;
 	overflow: auto;
 	border-radius: 0px;
 }
@@ -58,6 +73,7 @@ body {
 .cont {
 	margin-bottom: 20px;
 	padding: 0px 20px;
+	text-align: justify;
 }
 
 .add {
