Changed directory name from Add to Ancillary

--- a/Frontend/Ancillary/edit.ejs
+++ b/Frontend/Ancillary/edit.ejs
@@ -4,8 +4,8 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<script defer src="/Add/add.js"></script>
-	<link rel="stylesheet" href="/Add/add.css">
+	<script defer src="/Ancillary/add.js"></script>
+	<link rel="stylesheet" href="/Ancillary/add.css">
 	<link rel="icon" href="/Assets/favicon.ico">
 	<title>Edit</title>
 </head>
