Added tooltip to buttons

--- a/Frontend/Ancillary/edit.ejs
+++ b/Frontend/Ancillary/edit.ejs
@@ -42,8 +42,8 @@
 					<datalist id="projects">
 					</datalist>
 
-					<input class="form-btn" type="button" value="✔" onclick="sendToServer('PUT')">
-					<input class="form-btn" type="button" value="✖" onclick="cancel()">
+					<input class="form-btn" title='Save' type="button" value="✔" onclick="sendToServer('PUT')">
+					<input class="form-btn" title='Cancel' type="button" value="✖" onclick="cancel()">
 				</div>
 			</div>
 			<div id="res_id" style="opacity:0%"><%=id%></div>
