--- a/Frontend/Ancillary/add.css
+++ b/Frontend/Ancillary/add.css
@@ -167,15 +167,20 @@ textarea {
 }
 
 .form-btn {
-	margin-top: 18px;
+	margin-top: 14px;
 	background: none;
 	border: none;
 	cursor: pointer;
 	outline: none;
 	margin-left: auto;
-	width: 21px;
+	width: 25px;
+	height: 25px;
 	font-size: 0.75rem;
-	background-color: rgba(255, 255, 255, 0.65);
+	transition: 0.25s ease;
+}
+
+.form-btn:hover {
+	transform: rotate(90deg);
 }
 
 #bottom {
