Wrapped sendToServer function for redirection

--- a/Frontend/Ancillary/edit.ejs
+++ b/Frontend/Ancillary/edit.ejs
@@ -42,7 +42,7 @@
 					<datalist id="projects">
 					</datalist>
 
-					<button class="form-btn" title="Save" onclick="sendToServer('PUT')"><img src="/Assets/save.svg" alt="save button"></button>
+					<button class="form-btn" title="Save" onclick="STSWrapper('PUT')"><img src="/Assets/save.svg" alt="save button"></button>
 					<button class="form-btn" title="Cancel" onclick="cancel()"><img src="/Assets/cancel.svg" alt="cancel button"></button>
 				</div>
 			</div>
