asset location and icon

--- a/Frontend/Ancillary/edit.ejs
+++ b/Frontend/Ancillary/edit.ejs
@@ -4,9 +4,8 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<script defer src="/Ancillary/add.js"></script>
-	<link rel="stylesheet" href="/Ancillary/add.css">
-	<link rel="icon" href="/Assets/favicon.ico">
+	<script defer src="./add.js"></script>
+	<link rel="stylesheet" href="./add.css">
 	<title>Edit</title>
 </head>
 
@@ -42,8 +41,8 @@
 					<datalist id="projects">
 					</datalist>
 
-					<button class="form-btn" title="Save" onclick="STSWrapper('PUT')"><img src="/Assets/save.svg" alt="save button"></button>
-					<button class="form-btn" title="Cancel" onclick="cancel()"><img src="/Assets/cancel.svg" alt="cancel button"></button>
+					<button class="form-btn" title="Save" onclick="STSWrapper('PUT')"><img src="../../Assets/save.svg" alt="save button"></button>
+					<button class="form-btn" title="Cancel" onclick="cancel()"><img src="../../Assets/cancel.svg" alt="cancel button"></button>
 				</div>
 			</div>
 			<div id="res_id" style="opacity:0%"><%=id%></div>
