--- a/Frontend/Ancillary/edittag.ejs
+++ b/Frontend/Ancillary/edittag.ejs
@@ -4,9 +4,8 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<script defer src="/Ancillary/add2.js"></script>
-	<link rel="stylesheet" href="/Ancillary/add2.css">
-	<link rel="icon" href="/Assets/favicon.ico">
+	<script defer src="./add2.js"></script>
+	<link rel="stylesheet" href="./add2.css">
 	<title>Edit Tag</title>
 </head>
 
@@ -19,8 +18,8 @@
 				</div>
 
 				<div id="bottom">
-					<button class="form-btn" title="Save" onclick="sendTagToServer('PUT')"><img src="/Assets/save.svg" alt="save button"></button>
-					<button class="form-btn" title="Cancel" onclick="cancel()"><img src="/Assets/cancel.svg" alt="cancel button"></button>
+					<button class="form-btn" title="Save" onclick="sendTagToServer('PUT')"><img src="../../Assets/save.svg" alt="save button"></button>
+					<button class="form-btn" title="Cancel" onclick="cancel()"><img src="../../Assets/cancel.svg" alt="cancel button"></button>
 				</div>
 			</div>
 			<div id="tag_id" style="opacity:0%"><%=id%></div>
